@@ -158,9 +158,12 @@ auto JoinExecutor::produceRows(AqlItemBlockInputRange& inputRange,
         if (!idx.constantExpressions.empty()) {
           for (auto& expr : idx.constantExpressions) {
             bool mustDestroy = false;
-            ExecutorExpressionContext ctx{_trx, *_infos.query, _functionsCache,
+            ExecutorExpressionContext ctx{_trx,
+                                          *_infos.query,
+                                          _functionsCache,
                                           _currentRow,
-                                          idx.expressionVarsToRegs};
+                                          idx.expressionVarsToRegs,
+                                          _infos.query->resourceMonitor()};
 
             aql::AqlValue res = expr->execute(&ctx, mustDestroy);
             aql::AqlValueGuard guard{res, mustDestroy};
