@@ -42,7 +42,8 @@ class ExecutorExpressionContext final : public QueryExpressionContext {
   ExecutorExpressionContext(
       transaction::Methods& trx, QueryContext& context,
       AqlFunctionsInternalCache& cache, InputAqlItemRow const& inputRow,
-      std::vector<std::pair<VariableId, RegisterId>> const& varsToRegister);
+      std::vector<std::pair<VariableId, RegisterId>> const& varsToRegister,
+      ResourceMonitor& resourceMonitor);
 
   ~ExecutorExpressionContext() override = default;
 
@@ -50,11 +51,13 @@ class ExecutorExpressionContext final : public QueryExpressionContext {
                             bool& mustDestroy) const override;
 
   void adjustInputRow(InputAqlItemRow const& inputRow) noexcept;
+  ResourceMonitor& resourceMonitor() const { return _resourceMonitor; }
 
  private:
   /// @brief temporary storage for expression data context
   std::reference_wrapper<InputAqlItemRow const> _inputRow;
   std::vector<std::pair<VariableId, RegisterId>> const& _varsToRegister;
+  ResourceMonitor& _resourceMonitor;
 };
 
 }  // namespace aql
